feat: added typing animation

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
       href="https://fonts.googleapis.com/css?family=Raleway:700&display=swap"
       rel="stylesheet"
     />
+    <script src="main.js"></script>
+
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <title>Vinicius Portfólio</title>
   </head>
@@ -41,7 +43,16 @@
     <!-- START WELCOME SECTION -->
 
     <section id="welcome-section" class="welcome-section">
-      <h1>Olá, meu nome é Vinícius</h1>
+      <h1>
+        <a
+          href=""
+          class="typewrite"
+          data-period="2000"
+          data-type='["Olá, meu Nome é Vinicius."]'
+        >
+          <span class="wrap"></span>
+        </a>
+      </h1>
       <p>Desenvolvedor FullStack</p>
     </section>
 
