feat: added cv section

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
         <li>
           <a href="#contact">Contato</a>
         </li>
+        <li>
+          <a href="./assets/CvVinicius-07-12-22.pdf">Download CV</a>
+        </li>
       </ul>
     </nav>
 
@@ -48,7 +51,7 @@
           href=""
           class="typewrite"
           data-period="2000"
-          data-type='["Olá, meu Nome é Vinicius."]'
+          data-type='["Olá, meu nome é Vinicius.", "Desenvolvo por paixão.", "Me dê um problema, te dou uma solução."]'
         >
           <span class="wrap"></span>
         </a>
